<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <EditText
        android:id="@+id/edit_reg_user_name"
        style="@style/primary_edit"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txt_user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_reg_invite_code"
        style="@style/primary_edit"
        android:layout_width="match_parent"
        android:layout_below="@id/edit_reg_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txt_invite_code"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_reg_password"
        style="@style/primary_edit"
        android:layout_width="match_parent"
        android:layout_below="@id/edit_reg_user_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_reg_register"
        style="@style/primary_button_solid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_reg_invite_code"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:enabled="false"
        android:text="@string/txt_register" />

    <Button
        android:id="@+id/btn_reg_back_login"
        style="@style/primary_button_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reg_register"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:enabled="true"
        android:text="@string/txt_back_login" />

    <CheckBox
        android:id="@+id/check_reg_agreement"
        style="@style/chk_primary_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reg_back_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=" 同意 用户协议" />
</RelativeLayout>